--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^13.1.7"
   },
   "dependencies": {
+    "fs-extra": "^8.1.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
   }
