--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "fs-extra": "^8.1.0",
+    "promise": "^8.1.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
   }
